--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,5 @@ spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+
+spring.datasource.data=classpath:data-test.sql
