--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 #spring.datasource.username=sa
 #spring.datasource.password=
 
-spring.profiles.active = dev
+spring.profiles.active = test
 
 
 #### mySQL DB
